--- a/src/main/webapp/WEB-INF/templates/homePage.html
+++ b/src/main/webapp/WEB-INF/templates/homePage.html
@@ -18,93 +18,103 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="jumbotron jumbotron-fluid">
-    <div class="container">
-        <h1 class="display-4">Internetowy Komis Samochodwy</h1>
-        <p class="lead">Tu kupisz lub sprzedaż swój samochód</p>
+<div class="container">
+    <div class="jumbotron"  style="background-image: url(http://19pzs42g00hy2ju69t37l1bx.wpengine.netdna-cdn.com/wp-content/uploads/2016/02/2016-Chevrolet-Impala-Forest-Lake-MN-HD-01-1200x300.jpg)">
+        <div class="container">
+        <h5 class="display-4" style="color: ghostwhite">Internetowy Komis Samochodwy</h5>
+            <p class="lead" style="color: ghostwhite">Tu kupisz lub sprzedaż swój samochód</p>
+        </div>
     </div>
-</div>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Menu</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse"
-            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" th:href="@{/}">Start<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Pokaż samochody
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" th:href="@{/vehicles/all}">Pokaż wszystkie samochody</a>
-                    <a class="dropdown-item" th:href="@{/vehicles}">Pokaż dostępne samochody</a>
-                    <a class="dropdown-item" th:href="@{/vehicles/sold}">Pokaż sprzedane samochody</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Menu</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/}">Start<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Pokaż samochody
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" th:href="@{/vehicles/all}">Pokaż wszystkie samochody</a>
+                        <a class="dropdown-item" th:href="@{/vehicles}">Pokaż dostępne samochody</a>
+                        <a class="dropdown-item" th:href="@{/vehicles/sold}">Pokaż sprzedane samochody</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/vehicles/new}">Dodaj samochód</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/addCustomer}">Dodaj klienta</a>
+                </li>
+            </ul>
+            <div class="btn-group">
+                <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                    Zaloguj się
+                </button>
+                <div class="dropdown-menu">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Adres e-mail</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                   aria-describedby="emailHelp"
+                                   placeholder="Enter email"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Hasło</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1"
+                                   placeholder="Password"/>
+                        </div>
+                        <div class="form-group form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1"/>
+                            <label class="form-check-label" for="exampleCheck1">Zapamiętaj mnie</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Zaloguj</button>
+                    </form>
                 </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/vehicles/new}">Dodaj samochód</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/addCustomer}">Dodaj klienta</a>
-            </li>
-        </ul>
-        <div class="btn-group">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                Zaloguj się
-            </button>
-            <div class="dropdown-menu">
-                <form>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Adres e-mail</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                               placeholder="Enter email"/>
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Hasło</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"/>
-                    </div>
-                    <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1"/>
-                        <label class="form-check-label" for="exampleCheck1">Zapamiętaj mnie</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Zaloguj</button>
-                </form>
             </div>
         </div>
+    </nav>
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner" align="center">
+            <div class="carousel-item active">
+                <img class="d-block w-100"
+                     src="https://o.aolcdn.com/images/dims3/GLOB/crop/4592x2583+0+0/resize/800x450!/format/jpg/quality/85/http://o.aolcdn.com/hss/storage/midas/e2f0ece2871472cce6c3c7b8906b5ba1/206270962/stinger_moab_f34.jpg"
+                     alt="First slide"/>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100"
+                     src="https://1.bp.blogspot.com/-UOmmstxl-CQ/Vsm3kDNTopI/AAAAAAAAAb8/S7ph7uDFdBs/w800-h800/1995-toyota-corolla.jpg"
+                     alt="Second slide"/>
+            </div>
+            <div class=" carousel-item">
+                <img class="d-block w-100"
+                     src="https://s.yimg.com/ny/api/res/1.2/bf9Puh4fbKc6SFejlw.rfQ--/YXBwaWQ9aGlnaGxhbmRlcjtzbT0xO3c9ODAw/http://media.zenfs.com/en-US/homerun/motor1_us_477/c26e9e1533cf8418ec233c24ee482682"/>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-</nav>
-<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block w-100"
-                 src="https://st.motortrend.com/uploads/sites/5/2018/01/2018-Kia-Stinger-GT-front-three-quarter.jpg?interpolation=lanczos-none"
-                 alt="First slide"/>
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="http://starmoz.com/images/toyota-corolla-1995-11.jpg"
-                 alt="Second slide"/>
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100"
-                 src="https://s.yimg.com/ny/api/res/1.2/bf9Puh4fbKc6SFejlw.rfQ--~A/YXBwaWQ9aGlnaGxhbmRlcjtzbT0xO3c9ODAw/http://media.zenfs.com/en-US/homerun/motor1_us_477/c26e9e1533cf8418ec233c24ee482682"
-                 alt="Third slide"/>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h5 align="center">Autor</h5>
+            <h6 align="center">Andrzej Palica</h6>
         </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
 </div>
 </body>
 </html>
